# polyai

./: .$polyai.drawio.bkp  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  build.rs  carCollisionShapeVertices.json  polyai.drawio  rustfmt.toml
include/: determinism_check.h  main.h
scripts/: format.sh
src/: ammo.rs  ammo_sys.rs  determinism_check.cpp  determinism_check.ixx  main.cpp  main.rs  math.ixx
src/sim/: mod.rs  part_manager.rs  track.rs
