[package]
name = "polyai"
version = "0.1.0"
edition = "2024"

[dependencies]
autocxx = "0.30.0"
bbox = "0.14.1"
cxx = "1.0.173"
flate2 = "1.1.2"
nalgebra = "0.31.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0

[build-dependencies]
autocxx-build = "0.30.0"
